# Todo-App-Project

./: .gitignore  CLAUDE.md  package-lock.json
.specify/memory/: constitution.md
backend/: .env  .env.example  .gitignore  README.md  db.py  main.py  models.py  pyproject.toml  test.db
backend/agents/: todo_agent.py
backend/chatbot/: todo_agent.py
backend/mcp/: server.py
backend/middleware/: auth.py
backend/routes/: chat.py  tasks.py
backend/schemas/: task.py
backend/tests/: test_auth.py  test_chat.py  test_tasks.py
backend/tools/: server.py
frontend/: README.md  middleware.test.ts  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ThemeToggle.tsx
frontend/hooks/: useAuth.test.ts  useAuth.ts  useChat.ts  useChatWidget.ts  useTasks.test.ts  useTasks.ts  useTasks.tsx
frontend/lib/: api.test.ts  api.ts  auth-server.ts  auth.ts
frontend/types/: chat.ts  index.test.ts  index.ts
specs/001-phase2-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tests.md
specs/002-phase2-backend/: plan.md  spec.md  tasks.md  tests.md
specs/003-phase2-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tests.md
specs/004-ui-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-landing-page/: plan.md  specify.md  tasks.md  tests.md
specs/006-ai-chatbot/: plan.md  spec.md  tasks.md  tests.md
specs/007-floating-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+108 files in other folders)
